# reporting-app

./: .gitignore  .scalafmt.conf  README.md  bitbucket-pipelines.yml  build.sbt  build.sh  cleanup-images.sh  helm-delete.sh  helm-install.sh  istio-delete.sh  istio-install.sh  push-2-k8s  start.sh
api-report/: .env  Cargo.toml  Dockerfile  Dockerfile_debian  Rocket.toml  docker-image.sh
api-report/demokeys/: keystore.jks  server.cer  server.key
api-report/samples/: request.json
api-report/src/: cors.rs  fs_utils.rs  handlebars_ext.rs  lib.rs  main.rs  routes.rs  service.rs  templates.rs
api-report/templates/: app-report.html  i18.ini
api-search/src/main/resources/: api-search.conf  keystore.jks
api-search/src/main/scala/com/reporting/search/: AppConfig.scala  Main.scala  SearchService.scala  SslContext.scala  jsonCodes.scala  models.scala
api-search/src/test/scala/com/reporting/search/: ConsumerTest.scala  EsSchema.scala  EsTestNode.scala
composed/: docker-compose.yml
composed/config/: api-search.conf  elasticsearch.yml  logback.xml
gen-data/src/main/scala/com/reporting/gendata/: Config.scala  (+6 more)
helm/: Chart.yaml  istio-minikube-values.yaml  values.yaml
helm/config/: Rocket.toml  cert.pem  fullchain.pem  privkey.pem  role_mapping.yml  roles.yml
helm/templates/: _configs.tpl  _elasticsearch.tpl  _helpers.tpl  _ingress.yaml  _secret.yaml  api-report.yaml  api-search.yaml  elasticsearch.yaml  gateway.yaml  gen-data.yaml  istio-secret.yaml  ldap-users.yaml  ldap.yml  virtualservice.yaml
istio/: logging-stack.yaml
project/: Dependencies.scala
(+31 files in other folders)
