[package]
name = "api-report"
version = "0.1.0"
authors = ["Alexey Novakov <novakov.alex at gmail com>"]

[dependencies]
rocket = { version = "0.4.0", features = ["tls"] }
rocket_codegen = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["json"]}

handlebars = "1.1.0"

serde = "1.0.79"
serde_json = "*"
serde_derive = "*"

dotenv = "0.13.0"

uuid = {version = "0.7.1", features = ["serde", "v4"]}

log = "0.4.5"
env_logger = "0.5.13"

rust-ini = "0.13"